# oz-price-checker

./: .coveragerc  .env_vars  .gitattributes  .gitignore  .pydocstyle  .pylintrc  .sonarcloud.properties  .travis.yml  CODEOWNERS  LICENSE  README.md  pytest.ini  requirements.txt  setup.cfg  tox.ini
BaseData/: currencies.csv
Design/Database/: DbDesign.dia  Draft.V04.dia
Requirements/: requirements-development.txt  requirements-release-unpinned.txt  requirements-testing.txt
dev/: check_package_safety.sh  kill_test_server.bat  profile_PYTHON_PROG.bat  run_linters.bat  run_linters.sh  run_test_server.bat  run_test_server.sh  run_tests.bat  run_tests.sh
dev/Linting/: RunBandit.bat  RunBandit.sh  RunMyPy.bat  RunMyPy.sh  RunPycodestyle.bat  RunPycodestyle.sh  RunPydocstyle.bat  RunPydocstyle.sh  RunPylint.bat  RunPylint.sh
dev/Testing/: RunDjangoTests.bat  RunDjangoTests.sh  RunPytest.bat  RunPytest.sh
dev/Travis/: RunTravisTests.bat  RunTravisTests.sh
ozpricechecker/: manage.py
ozpricechecker/BaseData/MasterData/: scrape_types.csv
ozpricechecker/ozpricechecker/: __init__.py  settings.py  urls.py  wsgi.py
ozpricechecker/pricefinderapp/: __init__.py  admin.py  apps.py  filters.py  forms.py  models.py  urls.py  views.py
ozpricechecker/scripts/: data_import.bat  example_scrape_call.bat  import_master_data.bat  import_test_data.bat
ozpricechecker/templates/: base.html  index.html
ozpricechecker/tests/: common.py  test_network.py  test_success.py
ozpricechecker/utils/: project_logger.py
scripts/: data_import.bat
(+47 files in other folders)
