[bdist_wheel]
universal = true

[metadata]
name = "ozpricechecker"
version = v0.1
author = Eric Ziethen, Sumant Kadam
author-email = N/A
home-page = https://github.com/ericziethen/oz-price-checker
description = A price checker for various Websits
long-description = file:README.md
long-description-content-type = text/markdown; charset=UTF-8
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Operating System :: OS Independent
	Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
	Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >= 3.6
packages=find:

[options.packages.find]
exclude =
    tests
